# asset-bridge

./: .env.example  .gitignore  pyproject.toml
config/: pipeline.yaml
config/comfyui_workflows/: color_variant.json  model_shot.json  settings_shot.json
config/prompts/: cleanup.yaml  color_variant.yaml  model_shot.yaml  settings_shot.yaml
experiments/lora/: README.md  train_config.yaml
references/skus/AYNP70C/: manifest.yaml
src/asset_bridge/: __init__.py  cli.py  experiment.py  pipeline.py
src/asset_bridge/color_model/: __init__.py  dataset.py  inference.py  network.py  train.py
src/asset_bridge/lora/: __init__.py  dataset.py  inference.py  train.py
src/asset_bridge/providers/: __init__.py  base.py  budget_guard.py  comfyui_provider.py  gemini_provider.py  openai_provider.py
src/asset_bridge/quality/: fidelity.py
src/asset_bridge/stages/: __init__.py  base.py  cleanup.py  color_variant.py  model_shot.py  settings_shot.py
src/asset_bridge/ui/: app.py
src/asset_bridge/ui/components/: image_grid.py
src/asset_bridge/utils/: image.py  masks.py  references.py
